# AI2-NeuralNetwork

./: .gitignore  CMakeLists.txt  README.md
app/: main.cpp
include/: DataSet.h  csvreader.h  dataentry.h  network.h  neuron.h
res/: .~lock.export-2014-11-01T06-00-00_2014-11-10T13-00-00.csv#  .~lock.set1.csv#  .~lock.timeseries empty room.csv#  .~lock.trainingset.csv#  31_November-5_Desember.csv  export-2014-11-01T06-00-00_2014-11-10T13-00-00.csv  export-2014-11-30T07-00-00_2014-12-01T09-15-00.csv  set1.csv  timeseries empty room.csv  trainingset.csv  trainingset2_workinprogress.csv
src/: csvreader.cpp  dataentry.cpp  network.cpp  network.cpp.autosave  neuron.cpp
